--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -24,58 +24,61 @@
 
   <body class="ms-font-m ms-welcome ms-Fabric">
     <header class="ms-welcome__header ms-bgColor-neutralLighter">
-      <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
-      <h1 class="ms-font-su">Welcome</h1>
+      <img width="90" height="70" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
+      <h1 class="ms-font-su">Productivity Tracker Add-in</h1>
     </header>
     <main class="ms-firstrun-instructionstep">
-      <ul class="ms-List ms-welcome__features">
-        <li class="ms-ListItem">
-          <i class="ms-Icon ms-Icon--Ribbon ms-font-xl"></i>
-          <span class="ms-font-m">Achieve more with Office integration</span>
-        </li>
-        <li class="ms-ListItem">
-          <i class="ms-Icon ms-Icon--Unlock ms-font-xl"></i>
-          <span class="ms-font-m">Unlock features and functionality</span>
-        </li>
-        <li class="ms-ListItem">
-          <i class="ms-Icon ms-Icon--Design ms-font-xl"></i>
-          <span class="ms-font-m">Create and visualize like a pro</span>
-        </li>
-      </ul>
-      <section class="ms-firstrun-instructionstep__header">
-        <h2 class="ms-font-m">
-          This add-in demonstrates how to use single sign-on by making a call to Microsoft Graph to get user profile
-          data.
-        </h2>
-        <div class="ms-firstrun-instructionstep__header--image"></div>
-      </section>
       <div class="ms-firstrun-instructionstep__welcome-body">
-        <p class="ms-font-m ms-firstrun-instructionstep__welcome-intro"><b>To use this add-in:</b></p>
-        <ul class="ms-List ms-firstrun-instructionstep__list">
-          <li class="ms-ListItem">
-            <span class="ms-ListItem-primaryText">Click the <b>Get My User Profile Information</b> button.</span>
-            <div class="clearfix"></div>
-          </li>
-          <li class="ms-ListItem">
-            <span class="ms-ListItem-secondaryText"
-              >If you are not signed into Office, you are prompted to sign in.</span
-            >
-            <div class="clearfix"></div>
-          </li>
-          <li class="ms-ListItem">
-            <span class="ms-ListItem-primaryText"
-              >You may also be prompted to accept the app's permissions request.</span
-            >
-            <div class="clearfix"></div>
-          </li>
-          <li class="ms-ListItem">
-            <span class="ms-ListItem-primaryText"
-              >Your user profile information will be displayed in the document.</span
-            >
-            <div class="clearfix"></div>
-          </li>
-        </ul>
-        <br />
+        <div class="step">Step 1</div>
+        <p class="label">Please load one of the workbooks</p>
+
+        <p align="center">
+          <button id="open-ar-reconciliation-workbook" class="popupButton ms-Button ms-Button--primary">
+            <span class="ms-Button-label">Load AR Reconciliation Workbook</span>
+          </button>
+
+          <button id="open-ap-reconciliation-workbook" class="popupButton ms-Button ms-Button--primary">
+            <span class="ms-Button-label">Load AP Reconciliation Workbook </span>
+          </button>
+
+          <button id="open-productivity-jc-detail-workbook" class="popupButton ms-Button ms-Button--primary">
+            <span class="ms-Button-label">Load JC Detail Workbook</span>
+          </button>
+        </p>
+
+        <div class="step">Step 2</div>
+        <p class="label">Load the Productivity Tracker Workbook</p>
+
+        <p align="center">
+          <button id="open-productivity-tracker-workbook" class="popupButton ms-Button ms-Button--primary">
+            <span class="ms-Button-label">Load Productivity Tracker Workbook</span>
+          </button>
+        </p>
+
+        <div class="step">Step 3</div>
+        <p class="label">
+          Update any value on JC Progress Entry sheet on columns: A, B, D, E, P and T. And then click the Save to DB
+          button
+        </p>
+
+        <p align="center">
+          <button id="save-jc-productivity-data" class="popupButton ms-Button ms-Button--primary">
+            <span class="ms-Button-label">Save to DB</span>
+          </button>
+        </p>
+
+        <div class="step">Step 4</div>
+        <p class="label">
+          You can check the data you entered previously. Please click the Load from DB button. A new sheet will be
+          appended to the workbook where you will see the data that you modified in step 3
+        </p>
+
+        <p align="center">
+          <button id="load-jc-productivity-data" class="popupButton ms-Button ms-Button--primary">
+            <span class="ms-Button-label">Load from DB</span>
+          </button>
+        </p>
+
         <p align="center">
           <button id="getGraphDataButton" class="popupButton ms-Button ms-Button--primary">
             <span class="ms-Button-label">Get My User Profile Information </span>
@@ -91,5 +94,33 @@
         </p>
       </div>
     </main>
+
+    <div class="footer">
+      <div class="ms-Grid ms-bgColor-themeSecondary">
+        <div class="ms-Grid-row">
+          <div class="ms-Grid-col ms-u-sm12 ms-u-md12 ms-u-lg12">
+            <div class="ms-font-xl ms-fontColor-white">Olsen Consulting</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Component used for displaying notifications -->
+    <div class="MessageBanner" id="notification-popup">
+      <div class="MessageBanner-content">
+        <div class="MessageBanner-text">
+          <div class="MessageBanner-clipper">
+            <div class="ms-font-m-plus ms-fontWeight-semibold" id="notification-header"></div>
+            <div class="ms-font-m ms-fontWeight-semilight" id="notification-body"></div>
+          </div>
+        </div>
+        <button class="MessageBanner-expand" style="display: none">
+          <i class="ms-Icon ms-Icon--chevronsDown"></i>
+        </button>
+        <div class="MessageBanner-action"></div>
+      </div>
+      <button class="MessageBanner-close"><i class="ms-Icon ms-Icon--ChromeClose"></i></button>
+    </div>
+    
   </body>
 </html>
