added user facing error messages in case auth server is down or user is not in the db

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -40,6 +40,7 @@
           <button id="getGraphDataButton" class="button">
             <span class="ms-Button-label">Sign-in</span>
           </button>
+          <p id="warningText" class = "warning hidden"></p>
         </div>
 
         
